--- a/main.html
+++ b/main.html
@@ -4,122 +4,75 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	
+	<style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    form {
+      background-color: white;
+      padding: 25px 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 320px;
+    }
+    form h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    input[type="text"], select {
+      width: 100%;
+      padding: 8px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    input[type="checkbox"] {
+      margin-right: 8px;
+    }
+    input[type="submit"] {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    input[type="submit"]:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	    <div class="w-full max-w-lg bg-white shadow-2xl rounded-xl p-8 md:p-10 border border-gray-100">
+	  <form>
+    <h2>Dog Adoption Application</h2>
+    <input type="text" id="name" name="name" placeholder="Name" required>
+    <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+    <input type="text" id="address" name="address" placeholder="Address" required>
 
-        <!-- Header -->
-        <header class="mb-8">
-            <h1 class="text-3xl font-extrabold text-gray-900 mb-2 text-center">
-                Dog Adoption Application
-            </h1>
-            <p class="text-secondary-gray text-center">
-                Tell us a little about yourself and your home environment.
-            </p>
-        </header>
+    <label>
+      <input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog before?">
+      Have you ever lived with a Dog before?
+    </label><br><br>
 
-        <!-- The Form -->
-        <form id="adoptionForm" class="space-y-6">
+    <label for="multiSelect">Please select your preferred breeds:</label><br>
+    <select id="multiSelect" name="multiSelect" multiple required>
+      <option value="Labrador">Labrador</option>
+      <option value="German Shepherd">German Shepherd</option>
+      <option value="Golden Retriever">Golden Retriever</option>
+    </select><br><br>
 
-            <!-- Name Field -->
-            <div class="space-y-2">
-                <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                <input
-                    type="text"
-                    id="name"
-                    name="name"
-                    placeholder="Name"
-                    required
-                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-primary-blue focus:border-primary-blue transition duration-150 ease-in-out"
-                >
-            </div>
+    <input type="submit" id="submit" name="submit" value="Submit">
+  </form>
 
-            <!-- Phone Number Field -->
-            <div class="space-y-2">
-                <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
-                <input
-                    type="text"
-                    id="phone"
-                    name="phone"
-                    placeholder="Phone Number"
-                    required
-                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-primary-blue focus:border-primary-blue transition duration-150 ease-in-out"
-                >
-            </div>
-
-            <!-- Address Field -->
-            <div class="space-y-2">
-                <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
-                <textarea
-                    id="address"
-                    name="address"
-                    placeholder="Address"
-                    rows="3"
-                    required
-                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-primary-blue focus:border-primary-blue transition duration-150 ease-in-out resize-none"
-                ></textarea>
-            </div>
-
-            <!-- Checkbox Field -->
-            <div class="flex items-start">
-                <div class="flex items-center h-5">
-                    <input
-                        id="checkbox"
-                        name="checkbox"
-                        type="checkbox"
-                        value="Have you ever lived with a Dog before?"
-                        class="h-4 w-4 text-primary-blue border-gray-300 rounded focus:ring-primary-blue"
-                    >
-                </div>
-                <div class="ml-3 text-sm">
-                    <label for="checkbox" class="font-medium text-gray-700">
-                        Have you ever lived with a Dog before?
-                    </label>
-                </div>
-            </div>
-
-            <!-- Multi-Select Field -->
-            <div class="space-y-2">
-                <label for="select" class="block text-sm font-medium text-gray-700">
-                    Please select your preferred breeds (Hold Ctrl/Cmd to select multiple)
-                </label>
-                <select
-                    id="select"
-                    name="select"
-                    multiple
-                    required
-                    class="custom-select w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-primary-blue focus:border-primary-blue transition duration-150 ease-in-out text-gray-700"
-                >
-                    <option value="Labrador Retriever">Labrador Retriever</option>
-                    <option value="Golden Retriever">Golden Retriever</option>
-                    <option value="Beagle">Beagle</option>
-                    <option value="German Shepherd">German Shepherd</option>
-                    <option value="Poodle">Poodle</option>
-                    <option value="Mixed Breed">Mixed Breed (Open to suggestions)</option>
-                </select>
-            </div>
-
-            <!-- Submit Button -->
-            <div>
-                <button
-                    type="submit"
-                    id="submit"
-                    name="submit"
-                    value="Submit"
-                    class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-lg text-sm font-semibold text-white bg-primary-blue hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-blue transition duration-300 ease-in-out transform hover:scale-[1.01] active:scale-[0.99]"
-                >
-                    Submit
-                </button>
-            </div>
-            
-            <!-- Message Box (Instead of alert) -->
-            <div id="messageBox" class="hidden p-4 rounded-lg text-sm text-green-700 bg-green-100 border border-green-300 mt-4" role="alert"></div>
-
-        </form>
-    </div>
 
     <script type="text/javascript" src="./script.js">
 </script>
